--- a/Flutterflow_mas_firebase_y_sqlite/pubspec.yaml
+++ b/Flutterflow_mas_firebase_y_sqlite/pubspec.yaml
@@ -31,25 +31,59 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  auto_size_text: 3.0.0
+  cached_network_image: 3.4.1
+  cached_network_image_platform_interface: 4.1.1
+  cached_network_image_web: 1.3.1
+  collection: 1.19.1
+  firebase_core: 3.14.0
+  firebase_core_platform_interface: 5.4.0
+  firebase_core_web: 2.23.0
+  firebase_performance: 0.10.1+7
+  firebase_performance_platform_interface: 0.1.5+7
+  firebase_performance_web: 0.1.7+13
+  flutter_animate: 4.5.0
+  flutter_cache_manager: 3.4.1
+  font_awesome_flutter: 10.7.0
+  from_css_color: 2.0.0
+  go_router: 12.1.3
+  google_fonts: 6.1.0
+  intl: 0.20.2
+  json_path: 0.7.2
+  page_transition: 2.1.0
+  path_provider: 2.1.4
+  path_provider_android: 2.2.10
+  path_provider_foundation: 2.4.0
+  path_provider_linux: 2.2.1
+  path_provider_platform_interface: 2.1.2
+  path_provider_windows: 2.3.0
+  plugin_platform_interface: 2.1.8
+  provider: 6.1.5
+  shared_preferences: 2.5.3
+  shared_preferences_android: 2.4.10
+  shared_preferences_foundation: 2.5.4
+  shared_preferences_linux: 2.4.1
+  shared_preferences_platform_interface: 2.4.1
+  shared_preferences_web: 2.4.3
+  shared_preferences_windows: 2.4.1
+  sqflite: 2.3.3+1
+  sqflite_common: 2.5.4+3
+  timeago: 3.7.1
+  url_launcher: 6.3.1
+  url_launcher_android: 6.3.16
+  url_launcher_ios: 6.3.3
+  url_launcher_linux: 3.2.1
+  url_launcher_macos: 3.2.2
+  url_launcher_platform_interface: 2.3.2
+  url_launcher_web: 2.4.1
+  url_launcher_windows: 3.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
