--- a/Flutterflow_mas_firebase_y_sqlite/pubspec.yaml
+++ b/Flutterflow_mas_firebase_y_sqlite/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
   collection: 1.19.1
-  firebase_core: 3.14.0
+  firebase_core: ^3.14.0
   firebase_core_platform_interface: 5.4.0
   firebase_core_web: 2.23.0
   firebase_performance: 0.10.1+7
@@ -59,7 +59,7 @@ dependencies:
   path_provider_platform_interface: 2.1.2
   path_provider_windows: 2.3.0
   plugin_platform_interface: 2.1.8
-  provider: 6.1.5
+  provider: ^6.1.5+1
   shared_preferences: 2.5.3
   shared_preferences_android: 2.4.10
   shared_preferences_foundation: 2.5.4
@@ -78,6 +78,12 @@ dependencies:
   url_launcher_platform_interface: 2.3.2
   url_launcher_web: 2.4.1
   url_launcher_windows: 3.1.4
+  cloud_firestore: ^5.6.9
+  supabase_flutter: ^2.12.0
+  path: ^1.9.1
+  mongo_dart: ^0.10.5
+  file_picker: ^10.3.8
+  just_audio: ^0.10.5
 
 dev_dependencies:
   flutter_test:
