--- a/Flutterflow_mas_firebase_y_sqlite/pubspec.yaml
+++ b/Flutterflow_mas_firebase_y_sqlite/pubspec.yaml
@@ -72,12 +72,13 @@ dependencies:
   url_launcher_platform_interface: 2.3.2
   url_launcher_web: 2.4.1
   url_launcher_windows: 3.1.4
-  cloud_firestore: ^5.6.9
+  cloud_firestore: ^6.1.1
   supabase_flutter: ^2.12.0
   path: ^1.9.1
   mongo_dart: ^0.10.5
   file_picker: ^10.3.8
   just_audio: ^0.10.5
+  firebase_core: ^4.3.0
 
 dev_dependencies:
   flutter_test:
